Parameterize DB config and add env template
- read DB creds from env vars instead of hardcoding
- add .env.example and ignore local .env
- let docker-compose use POSTGRES_* env vars

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # Use this profile to connect to your local Docker-hosted Postgres
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/finance_db
-spring.datasource.username=postgres
-spring.datasource.password=kevin1995
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5433/finance_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
