--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,3 +23,10 @@ management:
     web:
       exposure:
         include: health, info
+
+# JWT configuration for development environment
+app:
+  jwt:
+    secret: ${JWT_SECRET:dev-only-change-me-please}
+    issuer: ${JWT_ISSUER:finance_manager}
+    exp-minutes: ${JWT_EXP_MINUTES:60}
