Add JWT configuration to environment files and update README for setup instructions

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_PASSWORD=change-me
 POSTGRES_DB=finance_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=change-me
+JWT_SECRET=dev-secret-change-this-dev-secret-change-this-1234567890
+JWT_ISSUER=finance_manager
+JWT_EXP_MINUTES=60
