Add Jackson BOM dependencies to align versions with Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,25 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- Re-assert Spring Boot's Jackson BOM to avoid version downgrades. -->
+			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>${jackson-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!-- Force Jackson module versions to align with Spring Boot's BOM. -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson-bom.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.datatype</groupId>
+				<artifactId>jackson-datatype-jsr310</artifactId>
+				<version>${jackson-bom.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
@@ -103,6 +122,12 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<scope>runtime</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
